# ioc-enrichment

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
envs/: .env.template
src/: celery_base.py  enums.py  enums_ops.py  main.py  models.py  tasks.py  utilities.py
src/templates/: index.html  result.html
